# XKin

./: CMakeLists.txt  Findfreenect.cmake
demo/: CMakeLists.txt
tools/: CMakeLists.txt  testposture.c
